[gd_scene load_steps=6 format=3 uid="uid://r13b2pnjirfc"]

[ext_resource type="Theme" uid="uid://bxqcmd2k7v707" path="res://main_theme.tres" id="1"]
[ext_resource type="Script" path="res://src/television/television-hud.gd" id="2"]
[ext_resource type="Script" path="res://src/television/match_stats_panel.gd" id="3"]
[ext_resource type="PackedScene" uid="uid://djjxvsnmspjrf" path="res://src/television/score_displays/USOpenScoreDisplay.tscn" id="4"]

[sub_resource type="Animation" id="1"]
resource_name = "start"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[node name="TelevisionHUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("2")

[node name="MatchStatsPanel" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("3")

[node name="Panel" type="Panel" parent="MatchStatsPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0

[node name="Label" type="Label" parent="MatchStatsPanel/Panel"]
offset_left = 145.0
offset_top = 78.0
offset_right = 185.0
offset_bottom = 92.0
theme = ExtResource("1")
text = "Novak
Djokovic"

[node name="Label2" type="Label" parent="MatchStatsPanel/Panel"]
offset_left = 310.0
offset_top = 78.0
offset_right = 365.0
offset_bottom = 109.0
theme = ExtResource("1")
text = "Novak
Djokovic"

[node name="Label3" type="Label" parent="MatchStatsPanel/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -41.0
offset_right = 20.0
offset_bottom = -10.0
theme = ExtResource("1")
text = "vs"
align = 1

[node name="PlayerImage" type="TextureRect" parent="MatchStatsPanel"]
offset_left = 277.0
offset_top = 201.0
offset_right = 477.0
offset_bottom = 401.0
minimum_size = Vector2(200, 200)
size_flags_vertical = 3
expand = true
stretch_mode = 5

[node name="PlayerImage2" type="TextureRect" parent="MatchStatsPanel"]
offset_left = 626.0
offset_top = 201.0
offset_right = 826.0
offset_bottom = 401.0
minimum_size = Vector2(200, 200)
size_flags_vertical = 3
expand = true
stretch_mode = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="MatchStatsPanel"]
anims/start = SubResource("1")

[node name="USOpenScoreDisplay" parent="." instance=ExtResource("4")]
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 47.0
offset_top = -82.0
offset_right = 47.0
offset_bottom = -82.0
